// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxp6c0l {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxp6c0l:focus,
.sxp6c0l:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxp6c0l:active {
  color: var(--sx-colors-primary);
}

.sxgpjqn > .sxp6c0l,
.sxoqdwd > .sxp6c0l,
.sx03kze > .sxp6c0l {
  font-size: 100%;
  line-height: 1;
}

.sxgpjqn > .sxp6c0l::before,
.sxgpjqn > .sxp6c0l::after,
.sxoqdwd > .sxp6c0l::before,
.sxoqdwd > .sxp6c0l::after,
.sx03kze > .sxp6c0l::before,
.sx03kze > .sxp6c0l::after {
  content: none;
}

.sxp6c0lryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxp6c0lryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxp6c0lryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sxp6c0l sxp6c0lryo8u--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxp6c0l {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxp6c0l:focus,
.sxp6c0l:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxp6c0l:active {
  color: var(--sx-colors-primary);
}

.sxgpjqn > .sxp6c0l,
.sxoqdwd > .sxp6c0l,
.sx03kze > .sxp6c0l {
  font-size: 100%;
  line-height: 1;
}

.sxgpjqn > .sxp6c0l::before,
.sxgpjqn > .sxp6c0l::after,
.sxoqdwd > .sxp6c0l::before,
.sxoqdwd > .sxp6c0l::after,
.sx03kze > .sxp6c0l::before,
.sx03kze > .sxp6c0l::after {
  content: none;
}

.sxp6c0lryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxp6c0lryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxp6c0lryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxp6c0lg0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxp6c0lg0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxp6c0lg0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxp6c0l sxp6c0lg0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
